[gd_scene load_steps=8 format=2]

[ext_resource path="res://backgrounds/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Title.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://Chrono_Menu.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 1800.0
loop = true
step = 100.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 900, 1800 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 40000, 0 ), Vector2( 0, 0 ) ]
}

[node name="Title" type="Node2D"]
script = ExtResource( 2 )
level = ExtResource( 4 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]
offset = Vector2( 1000, 200 )
transform = Transform2D( 1, 0, 0, 1, 1000, 200 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/move = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.5
margin_top = -31.0
margin_right = 99.5
margin_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/Main"]
margin_right = 199.0
margin_bottom = 14.0
text = "C.A.R.L."
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Main"]
margin_top = 30.0
margin_right = 199.0
margin_bottom = 106.0
custom_constants/margin_right = 24
custom_constants/margin_left = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Main/MarginContainer"]
margin_left = 24.0
margin_right = 175.0
margin_bottom = 76.0
custom_constants/separation = 8

[node name="Play" type="Button" parent="CanvasLayer/Control/Main/MarginContainer/VBoxContainer"]
margin_right = 151.0
margin_bottom = 20.0
size_flags_vertical = 2
text = "Play"

[node name="Controls" type="Button" parent="CanvasLayer/Control/Main/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 151.0
margin_bottom = 48.0
size_flags_vertical = 2
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/Control/Main/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 151.0
margin_bottom = 76.0
size_flags_vertical = 2
text = "Quit"

[node name="Settings" parent="CanvasLayer/Control" instance=ExtResource( 3 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="CanvasLayer/Control/Main/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main/MarginContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="back_pressed" from="CanvasLayer/Control/Settings" to="." method="_on_Settings_back_pressed"]
